--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,28 @@
-# =====================
+
 # OS-specific
-# =====================
+
 .DS_Store
 Thumbs.db
 
-# =====================
+
 # IDE / Editor configs
-# =====================
+
 .vscode/
 .idea/
 
-# ===================== 
+
 # Dependencies
-# ===================== 
+
 vendor/ 
 
-# ===================== 
+
 # Backup / temp files
-# ===================== 
+
 *.bak
 *.swp
 *.tmp
 
-# ===================== 
 # Private Backend API
-# ===================== 
-# _api/   # <- This folder will NOT be pushed to GitHub
+
+_api/   # <- This folder will NOT be pushed to GitHub
 _api.zip
